# Song-extraction

./: .dockerignore  .gitignore  Pipfile  README.md  Untitled.ipynb  audio-recognition.py  create_models.py  cut-video.py  filename-change.py  load_models.py  main.py  pyproject.toml  validate.py
docker/: Dockerfile
