[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sun-yryr"]

[tool.poetry.dependencies]
python = "3.9.*"
tensorflow = "^2.6.0"
librosa = "^0.8.1"
numpy = "^1.19.2"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
seaborn = "^0.11.2"
keras = "^2.6.0"
scikit-learn = "^0.24.2"
ipython = "^7.27.0"
requests = "^2.26.0"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
